--- a/Remage/Storyboards/Base.lproj/Main.storyboard
+++ b/Remage/Storyboards/Base.lproj/Main.storyboard
@@ -29,8 +29,8 @@
                     <connections>
                         <segue destination="o2W-kg-bJd" kind="relationship" relationship="viewControllers" id="2tf-Yw-Ykm"/>
                         <segue destination="fRW-Ns-Q6A" kind="relationship" relationship="viewControllers" id="bZ1-rl-66v"/>
-                        <segue destination="J8u-QT-NtW" kind="relationship" relationship="viewControllers" id="epU-Bx-lEl"/>
-                        <segue destination="fcO-OT-Rl3" kind="relationship" relationship="viewControllers" id="GKt-98-Pw8"/>
+                        <segue destination="KQl-ZF-cvz" kind="relationship" relationship="viewControllers" id="qHV-r5-ktq"/>
+                        <segue destination="fcO-OT-Rl3" kind="relationship" relationship="viewControllers" id="mN4-iu-cC0"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3bL-gK-sZR" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -45,7 +45,7 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Fgt-q9-2Yw" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-102" y="420"/>
+            <point key="canvasLocation" x="-215" y="457"/>
         </scene>
         <!--NewReminder-->
         <scene sceneID="Wb0-EB-sUj">
@@ -66,6 +66,16 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="J72-aW-6V6" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="315" y="420"/>
+        </scene>
+        <!--Alarms-->
+        <scene sceneID="8GY-zh-iEL">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Alarms" id="KQl-ZF-cvz" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="ZlE-7w-tVf"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qWF-DU-zep" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-11" y="457"/>
         </scene>
         <!--Testing Colors View Controller-->
         <scene sceneID="bBe-wr-He0">
