--- a/Remage/Storyboards/Alarms.storyboard
+++ b/Remage/Storyboards/Alarms.storyboard
@@ -16,12 +16,52 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="AlarmCell" id="AHT-Of-fvx" customClass="AlarmTableViewCell" customModule="Remage" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
+                                <rect key="frame" x="0.0" y="28" width="414" height="76.5"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="AHT-Of-fvx" id="m7i-l3-LVK">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="76.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8R0-IO-kM1">
+                                            <rect key="frame" x="333.5" y="8" width="60.5" height="60.5"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" secondItem="8R0-IO-kM1" secondAttribute="height" multiplier="1:1" id="HlS-N5-FDw"/>
+                                                <constraint firstAttribute="height" constant="60" id="o4Y-ex-06c"/>
+                                            </constraints>
+                                        </imageView>
+                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="7" translatesAutoresizingMaskIntoConstraints="NO" id="GL5-ON-npx">
+                                            <rect key="frame" x="20" y="16" width="293.5" height="44.5"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Alarm Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="txl-gc-D66">
+                                                    <rect key="frame" x="0.0" y="0.0" width="293.5" height="19"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title or Note" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="px1-8L-jgf">
+                                                    <rect key="frame" x="0.0" y="26" width="293.5" height="18.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </stackView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="trailing" secondItem="8R0-IO-kM1" secondAttribute="trailing" constant="20" id="LRj-sy-dYk"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="GL5-ON-npx" secondAttribute="bottom" constant="5" id="M4j-kJ-kWa"/>
+                                        <constraint firstItem="8R0-IO-kM1" firstAttribute="top" secondItem="m7i-l3-LVK" secondAttribute="top" constant="8" id="PpO-Yr-dYK"/>
+                                        <constraint firstItem="8R0-IO-kM1" firstAttribute="leading" secondItem="GL5-ON-npx" secondAttribute="trailing" constant="20" id="YsW-fK-MdW"/>
+                                        <constraint firstItem="GL5-ON-npx" firstAttribute="top" secondItem="m7i-l3-LVK" secondAttribute="topMargin" constant="5" id="ec3-pK-Itw"/>
+                                        <constraint firstItem="GL5-ON-npx" firstAttribute="leading" secondItem="m7i-l3-LVK" secondAttribute="leadingMargin" id="fb1-cv-jD8"/>
+                                        <constraint firstAttribute="bottom" secondItem="8R0-IO-kM1" secondAttribute="bottom" constant="8" id="vKS-3X-Djh"/>
+                                    </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="alarmLabel" destination="txl-gc-D66" id="BWX-mY-IgJ"/>
+                                    <outlet property="pictureImageView" destination="8R0-IO-kM1" id="wqn-n7-fGE"/>
+                                    <outlet property="titleLabel" destination="px1-8L-jgf" id="Cyi-OZ-6eb"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
