--- a/Remage/Storyboards/NewReminder.storyboard
+++ b/Remage/Storyboards/NewReminder.storyboard
@@ -253,7 +253,7 @@
             </objects>
             <point key="canvasLocation" x="157.97101449275362" y="139.95535714285714"/>
         </scene>
-        <!--New Reminder-->
+        <!--Details-->
         <scene sceneID="By8-0Q-Ybp">
             <objects>
                 <viewController id="ftG-iM-aUh" customClass="NewReminderDetailViewController" customModule="Remage" customModuleProvider="target" sceneMemberID="viewController">
@@ -274,7 +274,7 @@
                                                 </constraints>
                                             </imageView>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7pM-Yd-zE8">
-                                                <rect key="frame" x="15" y="345" width="384" height="373"/>
+                                                <rect key="frame" x="15" y="345" width="384" height="388.5"/>
                                                 <subviews>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="2zD-GN-TH9">
                                                         <rect key="frame" x="20" y="20" width="344" height="193"/>
@@ -339,52 +339,72 @@
                                                             <constraint firstItem="tTV-F4-6QM" firstAttribute="width" secondItem="bwr-pj-XoC" secondAttribute="width" id="KDP-JI-hbw"/>
                                                         </constraints>
                                                     </stackView>
-                                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" alignment="center" spacing="40" translatesAutoresizingMaskIntoConstraints="NO" id="xYt-DK-gHH">
-                                                        <rect key="frame" x="52" y="233" width="280" height="120"/>
+                                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="45" translatesAutoresizingMaskIntoConstraints="NO" id="ewb-Uo-RNC">
+                                                        <rect key="frame" x="49.5" y="228" width="285" height="140.5"/>
                                                         <subviews>
-                                                            <button opaque="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Te3-AU-nL5">
-                                                                <rect key="frame" x="0.0" y="0.0" width="120" height="120"/>
-                                                                <constraints>
-                                                                    <constraint firstAttribute="width" secondItem="Te3-AU-nL5" secondAttribute="height" multiplier="1:1" id="hBd-Fo-T1Y"/>
-                                                                </constraints>
-                                                                <state key="normal" backgroundImage="purpleCamera"/>
-                                                                <connections>
-                                                                    <action selector="addImagesButtonTapped:" destination="ftG-iM-aUh" eventType="touchUpInside" id="2qq-rf-8ZW"/>
-                                                                </connections>
-                                                            </button>
-                                                            <button opaque="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WMz-Ua-rWG">
-                                                                <rect key="frame" x="160" y="0.0" width="120" height="120"/>
-                                                                <constraints>
-                                                                    <constraint firstAttribute="width" secondItem="WMz-Ua-rWG" secondAttribute="height" multiplier="1:1" id="er9-3E-ai0"/>
-                                                                    <constraint firstAttribute="height" constant="120" id="yHN-vS-P5A"/>
-                                                                </constraints>
-                                                                <state key="normal" backgroundImage="purpleDocument"/>
-                                                                <connections>
-                                                                    <action selector="addNoteButtonTapped:" destination="ftG-iM-aUh" eventType="touchUpInside" id="r18-Vu-2Yo"/>
-                                                                    <segue destination="ozr-GA-mdF" kind="show" identifier="AddNewNoteSegue" id="og6-Aq-rUe"/>
-                                                                </connections>
-                                                            </button>
+                                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="GYz-RV-cqK">
+                                                                <rect key="frame" x="0.0" y="0.0" width="120" height="140.5"/>
+                                                                <subviews>
+                                                                    <button opaque="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Te3-AU-nL5">
+                                                                        <rect key="frame" x="0.0" y="0.0" width="120" height="120"/>
+                                                                        <constraints>
+                                                                            <constraint firstAttribute="width" secondItem="Te3-AU-nL5" secondAttribute="height" multiplier="1:1" id="hBd-Fo-T1Y"/>
+                                                                            <constraint firstAttribute="height" constant="120" id="tuS-y8-4qA"/>
+                                                                        </constraints>
+                                                                        <state key="normal" backgroundImage="purpleCamera"/>
+                                                                        <connections>
+                                                                            <action selector="addImagesButtonTapped:" destination="ftG-iM-aUh" eventType="touchUpInside" id="2qq-rf-8ZW"/>
+                                                                        </connections>
+                                                                    </button>
+                                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Add a Picture" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K8E-G6-ew4">
+                                                                        <rect key="frame" x="0.0" y="120" width="120" height="20.5"/>
+                                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                        <nil key="textColor"/>
+                                                                        <nil key="highlightedColor"/>
+                                                                    </label>
+                                                                </subviews>
+                                                            </stackView>
+                                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="ncw-iV-zQw">
+                                                                <rect key="frame" x="165" y="0.0" width="120" height="140.5"/>
+                                                                <subviews>
+                                                                    <button opaque="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WMz-Ua-rWG">
+                                                                        <rect key="frame" x="0.0" y="0.0" width="120" height="120"/>
+                                                                        <constraints>
+                                                                            <constraint firstAttribute="width" secondItem="WMz-Ua-rWG" secondAttribute="height" multiplier="1:1" id="er9-3E-ai0"/>
+                                                                            <constraint firstAttribute="height" constant="120" id="yHN-vS-P5A"/>
+                                                                        </constraints>
+                                                                        <state key="normal" backgroundImage="purpleDocument"/>
+                                                                        <connections>
+                                                                            <action selector="addNoteButtonTapped:" destination="ftG-iM-aUh" eventType="touchUpInside" id="r18-Vu-2Yo"/>
+                                                                            <segue destination="ozr-GA-mdF" kind="show" identifier="AddNewNoteSegue" id="og6-Aq-rUe"/>
+                                                                        </connections>
+                                                                    </button>
+                                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Add a Note" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LWf-xc-ZlE">
+                                                                        <rect key="frame" x="0.0" y="120" width="120" height="20.5"/>
+                                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                        <nil key="textColor"/>
+                                                                        <nil key="highlightedColor"/>
+                                                                    </label>
+                                                                </subviews>
+                                                            </stackView>
                                                         </subviews>
-                                                        <constraints>
-                                                            <constraint firstItem="Te3-AU-nL5" firstAttribute="height" secondItem="WMz-Ua-rWG" secondAttribute="height" id="Uwu-sp-d7A"/>
-                                                        </constraints>
                                                     </stackView>
                                                 </subviews>
                                                 <color key="backgroundColor" red="0.32369780539999998" green="0.1063579395" blue="0.574860394" alpha="0.15384203767123289" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <constraints>
                                                     <constraint firstItem="2zD-GN-TH9" firstAttribute="top" secondItem="7pM-Yd-zE8" secondAttribute="top" constant="20" id="Dk3-9G-kXY"/>
-                                                    <constraint firstAttribute="bottom" secondItem="xYt-DK-gHH" secondAttribute="bottom" constant="20" id="RIv-ec-Yzh"/>
-                                                    <constraint firstItem="xYt-DK-gHH" firstAttribute="centerX" secondItem="7pM-Yd-zE8" secondAttribute="centerX" id="SFB-A9-tCv"/>
+                                                    <constraint firstItem="ewb-Uo-RNC" firstAttribute="top" secondItem="2zD-GN-TH9" secondAttribute="bottom" constant="15" id="LHo-ME-EbD"/>
+                                                    <constraint firstAttribute="bottom" secondItem="ewb-Uo-RNC" secondAttribute="bottom" constant="20" id="f2X-Pt-6Kf"/>
                                                     <constraint firstItem="2zD-GN-TH9" firstAttribute="leading" secondItem="7pM-Yd-zE8" secondAttribute="leading" constant="20" id="kZg-xh-OfJ"/>
-                                                    <constraint firstItem="xYt-DK-gHH" firstAttribute="top" secondItem="2zD-GN-TH9" secondAttribute="bottom" constant="20" id="nDJ-YI-G36"/>
                                                     <constraint firstAttribute="trailing" secondItem="2zD-GN-TH9" secondAttribute="trailing" constant="20" id="p0B-MG-043"/>
+                                                    <constraint firstItem="ewb-Uo-RNC" firstAttribute="centerX" secondItem="7pM-Yd-zE8" secondAttribute="centerX" id="shX-5S-3zy"/>
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2E0-XH-DIw">
-                                                <rect key="frame" x="0.0" y="829" width="414" height="80"/>
+                                                <rect key="frame" x="0.0" y="844.5" width="414" height="64.5"/>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="height" constant="80" id="UZd-Fa-MuU"/>
+                                                    <constraint firstAttribute="height" constant="64.5" id="Hjj-l0-Juy"/>
                                                 </constraints>
                                             </view>
                                         </subviews>
@@ -422,7 +442,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="PD4-m2-m3g"/>
                     </view>
-                    <navigationItem key="navigationItem" title="New Reminder" id="ZcD-fV-EqL">
+                    <navigationItem key="navigationItem" title="Details" id="ZcD-fV-EqL">
                         <barButtonItem key="rightBarButtonItem" systemItem="save" id="ngK-7k-4Ki">
                             <connections>
                                 <action selector="saveButtonTapped:" destination="ftG-iM-aUh" id="d1I-ZZ-To3"/>
@@ -433,6 +453,8 @@
                     <connections>
                         <outlet property="addImagesButton" destination="Te3-AU-nL5" id="L3K-MO-9Pj"/>
                         <outlet property="addNoteButton" destination="WMz-Ua-rWG" id="jga-hO-k3S"/>
+                        <outlet property="addNoteLabel" destination="LWf-xc-ZlE" id="w4G-b5-JLd"/>
+                        <outlet property="addPictureLabel" destination="K8E-G6-ew4" id="8DY-HE-8b5"/>
                         <outlet property="alarmLabel" destination="bwr-pj-XoC" id="ol5-FN-3oB"/>
                         <outlet property="alarmSegmentedControl" destination="lHC-Qk-jnp" id="IsV-cN-lfK"/>
                         <outlet property="backgroundCardView" destination="7pM-Yd-zE8" id="Dtf-UA-Mpi"/>
